--- a/requirements.txt
+++ b/requirements.txt
@@ -1,39 +1,37 @@
-# Core data science and machine learning libraries
-pandas>=1.5.0
-numpy>=1.21.0
-scikit-learn>=1.0.0
-umap-learn>=0.5.9.post2
+# Core ML / Transformers stack
+torch==2.8.0
+# transformers==4.56.2
+# tokenizers==0.22.1
+# huggingface-hub==0.35.0
+# safetensors==0.6.2
+# accelerate==1.12.0
 
-# Deep learning frameworks
-torch>=1.12.0
-transformers>=4.20.0
+# Vector DB / similarity search
+faiss-cpu==1.13.0
+umap-learn==0.5.9.post2
+pynndescent==0.5.13
 
-# Visualization libraries
-matplotlib>=3.5.0
-seaborn>=0.11.0
+# Data & numerics
+numpy==2.3.3
+pandas==2.3.2
+scipy==1.16.2
+scikit-learn==1.7.2
+numba==0.62.1
 
-# Similarity search and vector operations
-faiss-cpu>=1.7.0
+# Visualization
+matplotlib==3.10.6
+seaborn==0.13.2
+pillow==11.3.0
 
-# Protein sequence analysis and embeddings
-# ESM model dependencies (covered by transformers)
+# Web / API
+# Flask==3.1.2
+# requests==2.32.5
 
-# Progress bars and utilities
-tqdm>=4.60.0
+# Utilities often needed
+tqdm==4.67.1
+PyYAML==6.0.2
+joblib==1.5.2
+regex==2025.9.18
 
-# File I/O and serialization
-joblib>=1.1.0
-
-# Jupyter notebook support (optional)
-jupyter>=1.0.0
-ipywidgets>=7.6.0
-
-# Standard library enhancements
-pathlib2>=2.3.0; python_version<"3.4"
-
-# Additional utilities for protein analysis
-# (These may be needed depending on your specific use case)
-biopython>=1.79
-
-# CLI argument parsing (part of standard library, but listing for completeness)
-# argparse - built into Python 3.2+
+# Excel support (if used)
+openpyxl==3.1.5
