--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 # Core ML / Transformers stack
 torch==2.8.0
-# transformers==4.56.2
+transformers==4.56.2
 # tokenizers==0.22.1
 # huggingface-hub==0.35.0
 # safetensors==0.6.2
